--- a/polymer-parent/vyne-studio/src/app/dashboard/dashboard.component.html
+++ b/polymer-parent/vyne-studio/src/app/dashboard/dashboard.component.html
@@ -111,9 +111,9 @@
   </div>
   <td-layout-footer>
     <div layout="row" layout-align="start center">
-      <span class="md-caption">Copyright &copy; 2016 Teradata. All rights reserved</span>
-      <span flex></span>
-      <md-icon class="md-icon-ux" svgIcon="assets:teradata-ux"></md-icon>
+      <span class="md-caption">Vyne Studio v123</span>
+      <!--<span flex></span>-->
+      <!--<md-icon class="md-icon-ux" svgIcon="assets:teradata-ux"></md-icon>-->
     </div>
   </td-layout-footer>
 </td-layout-nav>
