pre material -beta.12 upgrade

--- a/polymer-parent/angular4-seed/src/app/layout/left-sidebar/left-sidebar.component.html
+++ b/polymer-parent/angular4-seed/src/app/layout/left-sidebar/left-sidebar.component.html
@@ -4,7 +4,7 @@
 			<li class="sidebar-header">NAVIGATION</li>
 			<li routerLinkActive="active"><a md-ripple href="javascript:void(0)" [routerLink]="['/type-explorer']" class=""><i class="zmdi zmdi-compass"></i>Type explorer</a></li>
 			<li routerLinkActive="active"><a md-ripple href="javascript:void(0)" [routerLink]="['/schema-editor']" class=""><i class="zmdi zmdi-code-setting"></i>Schema Editor</a></li>
-			<li routerLinkActive="active"><a md-ripple href="javascript:void(0)" [routerLink]="['/query-editor']" class=""><md-icon>find_in_page</md-icon>Query Editor</a></li>
+			<li routerLinkActive="active"><a md-ripple href="javascript:void(0)" [routerLink]="['/query-editor']" class=""><i class="zmdi zmdi-search-in-page"></i>Query Editor</a></li>
 		</ul>
 	</div>
 </nav>
