--- a/polymer-parent/angular4-seed/src/app/layout/top-navbar/top-navbar.component.html
+++ b/polymer-parent/angular4-seed/src/app/layout/top-navbar/top-navbar.component.html
@@ -11,17 +11,17 @@
 	</ul>
 	<ul class="navbar-nav nav-left">
 		<li class="nav-item menu-icon">
-			<a md-ripple href="javascript:void(0)" role="button" (click)="toggleMenuSideabar()" class="nav-link menu-trigger">
+			<a matRipple href="javascript:void(0)" role="button" (click)="toggleMenuSideabar()" class="nav-link menu-trigger">
 				<i class="mdi mdi-backburger"></i>
 			</a>
 		</li>
 		<li class="nav-item hidden-sm">
-			<a md-ripple href="javascript:void(0)" (click)="toggleAppMobileLeftMenuSidebar()" class="nav-link mobile-menu-trigger">
+			<a matRipple href="javascript:void(0)" (click)="toggleAppMobileLeftMenuSidebar()" class="nav-link mobile-menu-trigger">
 				<i class="mdi mdi-backburger"></i>
 			</a>
 		</li>
 		<!--<li class="nav-item dropdown dropdown-lg app_menu_launcher hidden-sm-down" ngbDropdown>-->
-			<!--<a md-ripple href="javascript:void(0)" class="nav-link" ngbDropdownToggle>-->
+			<!--<a matRipple href="javascript:void(0)" class="nav-link" ngbDropdownToggle>-->
 				<!--<i class="zmdi zmdi-apps"></i>-->
 			<!--</a>-->
 			<!--<ul class="dropdown-menu dropdown-lg-menu  p-15 min-h-200">-->
@@ -33,17 +33,17 @@
 	</ul>
 	<ul class="navbar-nav nav-right">
 		<li class="nav-item">
-			<a md-ripple href="javascript:void(0)" (click)="search.searchStatus = true" class="nav-link">
+			<a matRipple href="javascript:void(0)" (click)="search.searchStatus = true" class="nav-link">
 				<i class="zmdi zmdi-search"></i>
 			</a>
 		</li>
       <li class="nav-item hidden-sm-down">
-         <a md-ripple href="javascript:void(0)" (click)="toggleProfile()" class="nav-link">
+         <a matRipple href="javascript:void(0)" (click)="toggleProfile()" class="nav-link">
             <i class="zmdi zmdi-account"></i>
          </a>
       </li>
 		<!--<li class="nav-item dropdown dropdown-lg hidden-sm-down" ngbDropdown>-->
-			<!--<a md-ripple href="javascript:void(0)" class="nav-link" ngbDropdownToggle>-->
+			<!--<a matRipple href="javascript:void(0)" class="nav-link" ngbDropdownToggle>-->
 				<!--<i class="zmdi zmdi-invert-colors"></i>-->
 			<!--</a>-->
 			<!--<ul class="dropdown-menu dropdown-lg-menu dropdown-menu-right p-15 color-container">-->
@@ -158,7 +158,7 @@
 			<!--</ul>-->
 
 		<!--<li class="nav-item">-->
-			<!--<a md-ripple href="javascript:void(0)" (click)="toggleAppRightSidebar()" class="nav-link">-->
+			<!--<a matRipple href="javascript:void(0)" (click)="toggleAppRightSidebar()" class="nav-link">-->
 				<!--<i [ngClass]="{'mdi-playlist-minus': false, 'mdi-playlist-plus': true}" class="mdi"></i>-->
 			<!--</a>-->
 		<!--</li>-->
