--- a/polymer-parent/angular4-seed/src/app/pages/page-layouts/detached-toolbar-left/detached-toolbar-left.component.html
+++ b/polymer-parent/angular4-seed/src/app/pages/page-layouts/detached-toolbar-left/detached-toolbar-left.component.html
@@ -30,7 +30,7 @@
 						</header>
 						<div class="card-block p-0 ">
 							<div class="list-group">
-								<div class="list-group-item" md-ripple>
+								<div class="list-group-item" matRipple>
 									<div class="row-action-primary">
 										<i class="zmdi zmdi-folder circle mw-salmon"></i>
 									</div>
@@ -39,7 +39,7 @@
 										<h4 class="list-group-item-heading">List item with icon</h4>
 									</div>
 								</div>
-								<div class="list-group-item" md-ripple>
+								<div class="list-group-item" matRipple>
 									<div class="row-action-primary">
 										<i class="zmdi zmdi-folder circle mw-salmon"></i>
 									</div>
@@ -48,7 +48,7 @@
 										<h4 class="list-group-item-heading">List item with icon</h4>
 									</div>
 								</div>
-								<div class="list-group-item" md-ripple>
+								<div class="list-group-item" matRipple>
 									<div class="row-action-primary">
 										<i class="zmdi zmdi-folder circle mw-salmon"></i>
 									</div>
@@ -57,7 +57,7 @@
 										<h4 class="list-group-item-heading">List item with icon</h4>
 									</div>
 								</div>
-								<div class="list-group-item" md-ripple>
+								<div class="list-group-item" matRipple>
 									<div class="row-action-primary">
 										<i class="zmdi zmdi-folder circle mw-salmon"></i>
 									</div>
@@ -72,8 +72,8 @@
 				</div>
 				<div class="col-md-8">
 					<div class="card">
-						<md-tab-group class="sidebar-right-tab-group" md-stretch-tabs>
-							<md-tab label="Tab One">
+						<mat-tab-group class="sidebar-right-tab-group" md-stretch-tabs>
+							<mat-tab label="Tab One">
 								<div class="card-block p-t-30">
 									<h3 class="p-t-15 p-b-15">Content Title One</h3>
 									<p>Deep v ex celiac twee. Reprehenderit affogato chia, roof party heirloom literally esse sartorial godard ennui. Enim lo-fi everyday carry, normcore anim ugh PBR&amp;B sartorial sunt fashion axe delectus. Assumenda vegan celiac taxidermy incididunt.
@@ -112,8 +112,8 @@
 										90's. Sriracha bitters meh fanny pack try-hard readymade, stumptown street art blue bottle.
 									</p>
 								</div>
-							</md-tab>
-							<md-tab label="Tab Two">
+							</mat-tab>
+							<mat-tab label="Tab Two">
 								<div class="card-block p-t-30">
 									<h3 class="p-t-15 p-b-15">Content Title Two</h3>
 									<p>Deep v ex celiac twee. Reprehenderit affogato chia, roof party heirloom literally esse sartorial godard ennui. Enim lo-fi everyday carry, normcore anim ugh PBR&amp;B sartorial sunt fashion axe delectus. Assumenda vegan celiac taxidermy incididunt.
@@ -153,8 +153,8 @@
 									</p>
 
 								</div>
-							</md-tab>
-							<md-tab label="Tab Three">
+							</mat-tab>
+							<mat-tab label="Tab Three">
 								<div class="card-block p-t-30">
 									<h3 class="p-t-15 p-b-15">Content Title Three</h3>
 									<p>Deep v ex celiac twee. Reprehenderit affogato chia, roof party heirloom literally esse sartorial godard ennui. Enim lo-fi everyday carry, normcore anim ugh PBR&amp;B sartorial sunt fashion axe delectus. Assumenda vegan celiac taxidermy incididunt.
@@ -193,8 +193,8 @@
 										90's. Sriracha bitters meh fanny pack try-hard readymade, stumptown street art blue bottle.
 									</p>
 								</div>
-							</md-tab>
-						</md-tab-group>
+							</mat-tab>
+						</mat-tab-group>
 					</div>
 				</div>
 			</div>
