--- a/polymer-parent/angular4-seed/src/app/pages/page-layouts/left-side-nav-v1/left-side-nav-v1.component.html
+++ b/polymer-parent/angular4-seed/src/app/pages/page-layouts/left-side-nav-v1/left-side-nav-v1.component.html
@@ -19,9 +19,9 @@
 			</ul>
 		</div>
 		<!--// Sidenav component container-->
-		<md-sidenav-container class="sidenav-container">
+		<mat-sidenav-container class="sidenav-container">
 			<!-- Sidenav -->
-			<md-sidenav #leftSidenav1 mode="{{navMode}}" class="sidenav">
+			<mat-sidenav #leftSidenav1 mode="{{navMode}}" class="sidenav">
 				<aside id="leftSidenav1">
 					<!-- <header class="header">
 					<h2 class="header-title alt-h2">Sidebar Header</h2>
@@ -32,7 +32,7 @@
 					</li>
 				</ul>
 			</aside>
-		</md-sidenav>
+		</mat-sidenav>
 		<!-- /END Sidenav -->
 		<div class="content-body">
 			<ngb-tabset type="pills" [orientation]="vertical" #t="ngbTabset" activeId="tab_0" id="tab_content">
@@ -206,7 +206,7 @@
 				</ngb-tab>
 			</ngb-tabset>
 		</div>
-	</md-sidenav-container>
+	</mat-sidenav-container>
 </div>
 </div>
 <!--  Footer Wrapper -->
