--- a/polymer-parent/angular4-seed/src/app/pages/page-layouts/right-side-nav-v1/right-side-nav-v1.component.html
+++ b/polymer-parent/angular4-seed/src/app/pages/page-layouts/right-side-nav-v1/right-side-nav-v1.component.html
@@ -13,7 +13,7 @@
 			</ul>
 		</header>
 		<!--// Sidenav component container-->
-		<md-sidenav-container class="sidenav-container">
+		<mat-sidenav-container class="sidenav-container">
 			<div class="content-body">
 				<ngb-tabset type="pills" [orientation]="vertical" #t="ngbTabset" activeId="tab_0" id="tab_content">
 					<ngb-tab id="tab_0">
@@ -187,7 +187,7 @@
 				</ngb-tabset>
 			</div>
 			<!-- Sidenav -->
-			<md-sidenav #rightSidenav1 mode="{{navMode}}" align="end" class="sidenav">
+			<mat-sidenav #rightSidenav1 mode="{{navMode}}" align="end" class="sidenav">
 				<aside id="rightSidenav1">
 					<!-- Optional Sidenav Header-->
 					<!-- <header class="header">
@@ -199,9 +199,9 @@
 						</li>
 					</ul>
 				</aside>
-			</md-sidenav>
+			</mat-sidenav>
 			<!-- /END Sidenav -->
-		</md-sidenav-container>
+		</mat-sidenav-container>
 	</div>
 	<!--  Footer Wrapper -->
 	<footer id="footer_wrapper" class="footer_wrapper"></footer>
