--- a/polymer-parent/angular4-seed/src/app/pages/page-layouts/right-side-nav-v2/right-side-nav-v2.component.html
+++ b/polymer-parent/angular4-seed/src/app/pages/page-layouts/right-side-nav-v2/right-side-nav-v2.component.html
@@ -1,7 +1,7 @@
 <!-- Content Wrapper - right Sidenav 2-->
 <div id="content_wrapper" class="rightSidenav2-wrapper">
 	<!--// Sidenav component container-->
-	<md-sidenav-container class="sidenav-container">
+	<mat-sidenav-container class="sidenav-container">
 		<!-- Page Content -->
 		<div class="content">
 			<div class="header-wrapper header-sm">
@@ -96,26 +96,26 @@
 			</div>
 		</div>
 		<!-- Sidenav -->
-		<md-sidenav #rightSidenav2  mode="{{navMode}}" align="end" class="sidenav">
+		<mat-sidenav #rightSidenav2  mode="{{navMode}}" align="end" class="sidenav">
 			<aside id="rightSidenav2">
 				<header class="header">
 					<h2 class="header-title alt-h2">Sidebar Header</h2>
 				</header>
 				<nav class="submenu">
 					<ul>
-						<li><a md-ripple href="javascript:void(0)"><i class="zmdi zmdi-car-taxi"></i> Menu Item</a></li>
-						<li><a md-ripple href="javascript:void(0)"><i class="zmdi zmdi-walk"></i> Menu Item</a></li>
-						<li><a md-ripple href="javascript:void(0)"><i class="zmdi zmdi-subway"></i> Menu Item</a></li>
-						<li><a md-ripple href="javascript:void(0)"><i class="zmdi zmdi-hotel"></i> Menu Item</a></li>
-						<li><a md-ripple href="javascript:void(0)"><i class="zmdi zmdi-cutlery"></i> Menu Item</a></li>
+						<li><a matRipple href="javascript:void(0)"><i class="zmdi zmdi-car-taxi"></i> Menu Item</a></li>
+						<li><a matRipple href="javascript:void(0)"><i class="zmdi zmdi-walk"></i> Menu Item</a></li>
+						<li><a matRipple href="javascript:void(0)"><i class="zmdi zmdi-subway"></i> Menu Item</a></li>
+						<li><a matRipple href="javascript:void(0)"><i class="zmdi zmdi-hotel"></i> Menu Item</a></li>
+						<li><a matRipple href="javascript:void(0)"><i class="zmdi zmdi-cutlery"></i> Menu Item</a></li>
 					</ul>
 				</nav>
 			</aside>
-		</md-sidenav>
+		</mat-sidenav>
 		<!-- /END Sidenav -->
 		<!--  Footer Wrapper -->
 		<footer id="footer_wrapper" class="footer_wrapper"></footer>
-	</md-sidenav-container>
+	</mat-sidenav-container>
 	<!-- /END Sidenav component container -->
 </div>
 <!-- /END Content Wrapper - right Sidenav 2-->
