--- a/polymer-parent/angular4-seed/src/app/shared/components/cards/image-card/image-card.component.html
+++ b/polymer-parent/angular4-seed/src/app/shared/components/cards/image-card/image-card.component.html
@@ -29,7 +29,7 @@
 		<div class="card-footer border-top">
 			<ul class="actions bottom-left">
 				<li>
-					<a href="javascript:void(0)" class="btn btn-default btn-flat"  md-ripple>
+					<a href="javascript:void(0)" class="btn btn-default btn-flat"  matRipple>
 						Read More
 					</a>
 				</li>
