--- a/polymer-parent/angular4-seed/src/app/shared/components/cards/list-card/list-card.component.html
+++ b/polymer-parent/angular4-seed/src/app/shared/components/cards/list-card/list-card.component.html
@@ -40,7 +40,7 @@
 	<div class="card-footer border-top">
 		<ul class="more">
 			<li>
-				<a href="javascript:void(0)" class="btn btn-default btn-flat" md-ripple>View More</a>
+				<a href="javascript:void(0)" class="btn btn-default btn-flat" matRipple>View More</a>
 			</li>
 		</ul>
 		<ul class="actions icons right">
