--- a/polymer-parent/angular4-seed/src/app/shared/components/cards/social-card/social-card.component.html
+++ b/polymer-parent/angular4-seed/src/app/shared/components/cards/social-card/social-card.component.html
@@ -23,7 +23,7 @@
 	<div class="card-block">
 		<h3 class="name">{{title}}</h3>
 		<span class="title">{{subtitle}}</span>
-		<button type="button" class="btn btn-accent btn-round" md-ripple>Connect</button>
+		<button type="button" class="btn btn-accent btn-round" matRipple>Connect</button>
 	</div>
 	<footer class="card-footer border-top m-t-50">
 		<div class="row p-t-10 p-b-10">
