--- a/polymer-parent/angular4-seed/src/app/shared/components/profile/profile.component.html
+++ b/polymer-parent/angular4-seed/src/app/shared/components/profile/profile.component.html
@@ -9,16 +9,16 @@
 	</header>
 	<ul class="submenu" [ngClass]="{'open' : isProfileSubmenuVisible}">
 		<li>
-			<a href="javascript:void(0)" md-ripple><i class="zmdi zmdi-account"></i> Profile</a>
+			<a href="javascript:void(0)" matRipple><i class="zmdi zmdi-account"></i> Profile</a>
 		</li>
 		<li>
-			<a href="javascript:void(0)"  md-ripple><i class="zmdi zmdi-email"></i> Messages</a>
+			<a href="javascript:void(0)"  matRipple><i class="zmdi zmdi-email"></i> Messages</a>
 		</li>
 		<li>
-			<a href="javascript:void(0)"  md-ripple><i class="zmdi zmdi-settings"></i> Account Settings</a>
+			<a href="javascript:void(0)"  matRipple><i class="zmdi zmdi-settings"></i> Account Settings</a>
 		</li>
 		<li>
-			<a href="javascript:void(0)"  md-ripple><i class="zmdi zmdi-sign-in"></i> Sign Out</a>
+			<a href="javascript:void(0)"  matRipple><i class="zmdi zmdi-sign-in"></i> Sign Out</a>
 		</li>
 	</ul>
 </div>
