--- a/polymer-parent/angular4-seed/src/app/shared/components/todo/todo.component.html
+++ b/polymer-parent/angular4-seed/src/app/shared/components/todo/todo.component.html
@@ -10,9 +10,9 @@
 	<div class="card-block">
 		<form novalidate [formGroup]="form" (ngSubmit)="onSubmit(form)" class="slider" [ngClass]="{'closed' : triggerToggleInput}">
 			<div class="form-group" [ngClass]="form.get('newTask').hasError('required') && isSubmitted ? 'has-danger' : ''">
-				<md-input-container floatPlaceholder="auto" class="float-auto">
-					<input mdInput class="form-control" type="text" id="task" placeholder="Add a task" formControlName="newTask" autocomplete="off">
-				</md-input-container>
+				<mat-form-field floatPlaceholder="auto" class="float-auto">
+					<input matInput class="form-control" type="text" id="task" placeholder="Add a task" formControlName="newTask" autocomplete="off">
+				</mat-form-field>
 			</div>
 		</form>
 		<section dnd-sortable-container [sortableData]="tasks">
